syntax = "proto3";
option java_multiple_files = true;
package com.huytran.grpcdemo.generatedproto;

message UploadAvatarRequest {
    bytes content = 1;
    string name = 2;
    int64 user_id = 3;
}

message UploadAvatarResponse {
    int32 result_code = 1;
    string file_name = 2;
    string name = 3;
    int64 user_id = 4;
    int64 id = 5;
}

message DownloadAvatarRequest {
}

message DownloadAvatarResponse {
    int32 result_code = 1;
    bytes image = 2;
    string file_name = 3;
    string name = 4;
}

message DownloadAvatarOfUserRequest {
    int64 user_id = 1;
}

message DownloadAvatarOfUserResponse {
    int32 result_code = 1;
    bytes image = 2;
    string file_name = 3;
    string name = 4;
}

message GetAvatarInfoOfUserRequest {
    int64 user_id = 1;
}

message GetAvatarInfoOfUserResponse {
    int32 result_code = 1;
    int64 avatar_id = 2;
}

message DownloadAvatarWithIdRequest {
    int64 id = 1;
}

message DownloadAvatarWithIdResponse {
    int32 result_code = 1;
    bytes image = 2;
    string file_name = 3;
    string name = 4;
}

service AvatarService {
    rpc UploadAvatar(stream UploadAvatarRequest) returns (UploadAvatarResponse) {}
    rpc DownloadAvatar(DownloadAvatarRequest) returns (stream DownloadAvatarResponse) {}
    rpc DownloadAvatarOfUser(DownloadAvatarOfUserRequest) returns (stream DownloadAvatarOfUserResponse) {}
    rpc GetAvatarInfoOfUser(GetAvatarInfoOfUserRequest) returns (GetAvatarInfoOfUserResponse) {}
    rpc DownloadAvatarWithId(DownloadAvatarWithIdRequest) returns (stream DownloadAvatarWithIdResponse) {}
}